Moving site to typescript

--- a/static/index.html
+++ b/static/index.html
@@ -242,274 +242,6 @@
             </div>
         </div>
 
-        <script>
-            const API_URL = window.location.origin;
-            const WS_URL = API_URL.replace("http", "ws") + "/api/chat/ws";
-
-            let ws = null;
-            let sessionId = null;
-            let currentRecording = null;
-            let mediaRecorder = null;
-            let audioChunks = [];
-            let pendingRecordingId = null;
-
-            const statusEl = document.getElementById("status");
-            const messagesEl = document.getElementById("messages");
-            const messageInput = document.getElementById("messageInput");
-            const sendButton = document.getElementById("sendButton");
-
-            function updateStatus(text, className) {
-                statusEl.textContent = text;
-                statusEl.className = `status ${className}`;
-            }
-
-            function addMessage(text, type = "assistant", data = null) {
-                const messageEl = document.createElement("div");
-                messageEl.className = `message ${type}`;
-
-                const textEl = document.createElement("div");
-                textEl.textContent = text;
-                messageEl.appendChild(textEl);
-
-                if (data && data.audio_file_id) {
-                    const audioEl = document.createElement("div");
-                    audioEl.className = "audio-player";
-                    audioEl.innerHTML = `<audio controls src="${API_URL}/api/audio/${data.audio_file_id}"></audio>`;
-                    messageEl.appendChild(audioEl);
-                }
-
-                if (data && data.notation_url) {
-                    const notationEl = document.createElement("div");
-                    notationEl.className = "notation";
-                    notationEl.innerHTML = `<img src="${data.notation_url}" alt="Musical notation" />`;
-                    messageEl.appendChild(notationEl);
-                }
-
-                messagesEl.appendChild(messageEl);
-                messagesEl.scrollTop = messagesEl.scrollHeight;
-            }
-
-            function addRecordingWidget(recordingId, prompt, maxDuration) {
-                const widgetEl = document.createElement("div");
-                widgetEl.className = "recording-widget";
-                widgetEl.id = `recording-${recordingId}`;
-                widgetEl.innerHTML = `
-                <h3>Recording Request</h3>
-                <div class="prompt">${prompt}</div>
-                <div class="recording-controls">
-                    <button class="record-btn" data-recording-id="${recordingId}">Record</button>
-                    <button class="stop-btn" data-recording-id="${recordingId}" style="display:none;">Stop</button>
-                    <button class="send-btn" data-recording-id="${recordingId}" disabled>Send</button>
-                    <button class="cancel-btn" data-recording-id="${recordingId}">Cancel</button>
-                    <span class="recording-status" id="status-${recordingId}"></span>
-                </div>
-                <div class="audio-player" id="player-${recordingId}"></div>
-            `;
-                messagesEl.appendChild(widgetEl);
-                messagesEl.scrollTop = messagesEl.scrollHeight;
-
-                widgetEl
-                    .querySelector(".record-btn")
-                    .addEventListener("click", () => startRecording(recordingId));
-                widgetEl
-                    .querySelector(".stop-btn")
-                    .addEventListener("click", () => stopRecording(recordingId));
-                widgetEl
-                    .querySelector(".send-btn")
-                    .addEventListener("click", () => sendRecording(recordingId));
-                widgetEl
-                    .querySelector(".cancel-btn")
-                    .addEventListener("click", () => cancelRecording(recordingId));
-            }
-
-            function removeRecordingWidget(recordingId) {
-                const widget = document.getElementById(`recording-${recordingId}`);
-                if (widget) {
-                    widget.remove();
-                }
-            }
-
-            async function startRecording(recordingId) {
-                try {
-                    const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-                    mediaRecorder = new MediaRecorder(stream);
-                    audioChunks = [];
-                    currentRecording = recordingId;
-
-                    const widgetEl = document.getElementById(`recording-${recordingId}`);
-                    const statusEl = document.getElementById(`status-${recordingId}`);
-                    const recordBtn = widgetEl.querySelector(".record-btn");
-                    const stopBtn = widgetEl.querySelector(".stop-btn");
-
-                    mediaRecorder.ondataavailable = (event) => {
-                        audioChunks.push(event.data);
-                    };
-
-                    mediaRecorder.onstop = () => {
-                        const audioBlob = new Blob(audioChunks, { type: "audio/wav" });
-                        const audioUrl = URL.createObjectURL(audioBlob);
-                        const playerEl = document.getElementById(`player-${recordingId}`);
-                        playerEl.innerHTML = `<audio controls src="${audioUrl}"></audio>`;
-
-                        const sendBtn = widgetEl.querySelector(".send-btn");
-                        sendBtn.disabled = false;
-                        statusEl.textContent = "Recording complete";
-                        statusEl.className = "recording-status";
-                    };
-
-                    mediaRecorder.start();
-                    statusEl.textContent = "Recording...";
-                    statusEl.className = "recording-status recording";
-                    recordBtn.style.display = "none";
-                    stopBtn.style.display = "inline-block";
-                } catch (error) {
-                    addMessage(`Error accessing microphone: ${error.message}`, "error");
-                }
-            }
-
-            function stopRecording(recordingId) {
-                if (mediaRecorder && mediaRecorder.state !== "inactive") {
-                    mediaRecorder.stop();
-                    mediaRecorder.stream.getTracks().forEach((track) => track.stop());
-
-                    const widgetEl = document.getElementById(`recording-${recordingId}`);
-                    const stopBtn = widgetEl.querySelector(".stop-btn");
-                    const recordBtn = widgetEl.querySelector(".record-btn");
-
-                    recordBtn.style.display = "inline-block";
-                    stopBtn.style.display = "none";
-                }
-            }
-
-            async function sendRecording(recordingId) {
-                if (audioChunks.length === 0) {
-                    addMessage("No audio recorded", "error");
-                    return;
-                }
-
-                const audioBlob = new Blob(audioChunks, { type: "audio/wav" });
-                const formData = new FormData();
-                formData.append("file", audioBlob, "recording.wav");
-                formData.append("recording_id", recordingId);
-
-                try {
-                    const response = await fetch(`${API_URL}/api/audio/upload`, {
-                        method: "POST",
-                        body: formData,
-                    });
-
-                    if (!response.ok) {
-                        throw new Error(`Upload failed: ${response.statusText}`);
-                    }
-
-                    const data = await response.json();
-                    removeRecordingWidget(recordingId);
-
-                    if (ws && ws.readyState === WebSocket.OPEN) {
-                        ws.send(
-                            JSON.stringify({
-                                type: "audio_ready",
-                                audio_file_id: data.audio_file_id,
-                                recording_id: recordingId,
-                                session_id: sessionId,
-                            })
-                        );
-                    }
-
-                    audioChunks = [];
-                    currentRecording = null;
-                    mediaRecorder = null;
-                } catch (error) {
-                    addMessage(`Error uploading audio: ${error.message}`, "error");
-                }
-            }
-
-            function cancelRecording(recordingId) {
-                if (mediaRecorder && mediaRecorder.state !== "inactive") {
-                    mediaRecorder.stop();
-                    mediaRecorder.stream.getTracks().forEach((track) => track.stop());
-                }
-                removeRecordingWidget(recordingId);
-                audioChunks = [];
-                currentRecording = null;
-                mediaRecorder = null;
-
-                if (ws && ws.readyState === WebSocket.OPEN) {
-                    ws.send(
-                        JSON.stringify({
-                            type: "cancel_recording",
-                            recording_id: recordingId,
-                        })
-                    );
-                }
-            }
-
-            function connect() {
-                ws = new WebSocket(WS_URL);
-
-                ws.onopen = () => {
-                    updateStatus("Connected", "connected");
-                    sendButton.disabled = false;
-                };
-
-                ws.onmessage = (event) => {
-                    const data = JSON.parse(event.data);
-
-                    if (data.session_id) {
-                        sessionId = data.session_id;
-                    }
-
-                    if (data.type === "response") {
-                        addMessage(data.message, "assistant", data);
-                    } else if (
-                        data.type === "tool_call" &&
-                        data.tool_name === "request_audio_recording"
-                    ) {
-                        const args = data.arguments || {};
-                        addRecordingWidget(
-                            data.tool_id || `rec_${Date.now()}`,
-                            args.prompt || "Please record audio",
-                            args.max_duration || 60.0
-                        );
-                    } else if (data.type === "error") {
-                        addMessage(`Error: ${data.message}`, "error");
-                    }
-                };
-
-                ws.onerror = (error) => {
-                    updateStatus("Connection error", "disconnected");
-                    console.error("WebSocket error:", error);
-                };
-
-                ws.onclose = () => {
-                    updateStatus("Disconnected", "disconnected");
-                    sendButton.disabled = true;
-                    setTimeout(connect, 3000);
-                };
-            }
-
-            sendButton.addEventListener("click", () => {
-                const message = messageInput.value.trim();
-                if (message && ws && ws.readyState === WebSocket.OPEN) {
-                    addMessage(message, "user");
-                    ws.send(
-                        JSON.stringify({
-                            type: "message",
-                            message: message,
-                            session_id: sessionId,
-                        })
-                    );
-                    messageInput.value = "";
-                }
-            });
-
-            messageInput.addEventListener("keypress", (e) => {
-                if (e.key === "Enter") {
-                    sendButton.click();
-                }
-            });
-
-            connect();
-        </script>
+        <script src="/static/app.js" type="module"></script>
     </body>
 </html>
