Adding container for deployment

--- a/static/index.html
+++ b/static/index.html
@@ -223,6 +223,45 @@
                 background: #f8d7da;
                 color: #721c24;
             }
+
+            .typing-indicator {
+                opacity: 0.7;
+            }
+
+            .typing-dots {
+                display: flex;
+                gap: 4px;
+                padding: 0.5rem;
+            }
+
+            .typing-dots span {
+                width: 8px;
+                height: 8px;
+                border-radius: 50%;
+                background: #7f8c8d;
+                animation: typing 1.4s infinite;
+            }
+
+            .typing-dots span:nth-child(2) {
+                animation-delay: 0.2s;
+            }
+
+            .typing-dots span:nth-child(3) {
+                animation-delay: 0.4s;
+            }
+
+            @keyframes typing {
+                0%,
+                60%,
+                100% {
+                    transform: translateY(0);
+                    opacity: 0.7;
+                }
+                30% {
+                    transform: translateY(-10px);
+                    opacity: 1;
+                }
+            }
         </style>
     </head>
     <body>
